<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <SurfaceView    
        android:id="@+id/surfaceView"    
        android:layout_width="fill_parent"    
        android:layout_height="fill_parent" 
        android:background="#f0f0f0"
        android:configChanges="orientation|screenSize"/>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f0f0f0">
    
    <LinearLayout
	    android:id="@+id/layout4"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_gravity="center"
	    android:orientation="vertical"
	    android:layout_marginTop="8dp"
	    android:layout_marginBottom="8dp"
	    android:layout_marginLeft="8dp"
	    android:layout_marginRight="8dp"
	    android:background = "@drawable/linearlayout_style" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="#5f80d6"
        android:text="@string/app_name1" />

	<ImageView
	        	android:id="@+id/divide_line"
           		android:layout_width="fill_parent"
           		android:layout_height="wrap_content"
   				android:scaleType="fitXY"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:layout_marginTop="10dp"
				android:src="@drawable/divider_line"
				android:layout_centerInParent="true" />

<LinearLayout
    android:id="@+id/layout4"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="50dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >
    
        <ImageButton
       	   android:id="@+id/wifi"
           android:layout_width="50dp"
           android:layout_height="50dp"
           android:background="@drawable/wifi" />

        <ImageButton
            android:id="@+id/init"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/init" />

        
    </LinearLayout>    
   </LinearLayout>
	<LinearLayout
	    android:id="@+id/layout6"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/layout4"
	    android:layout_gravity="center"
	    android:layout_marginTop="10dp"
	    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >   


         <TextView 
  		    android:id="@+id/hotpottext"
  		    android:text="@string/wifi"
  		    android:gravity="center_horizontal"
  		    android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_marginLeft="8dp" 
            android:textColor="#5f80d6"
             />
        <TextView 
  		    android:id="@+id/inittext"
  		    android:text="@string/init"
  		    android:gravity="center_horizontal"
  		    android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_marginLeft="12dp"  
            android:textColor="#5f80d6"          
             />

         </LinearLayout>    
   </LinearLayout>
    <TextView
        android:id="@+id/seekbar_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="#5f80d6"
        android:text="@string/seekbar_text" />

    <TextView
            android:id="@+id/num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="1dp"
            android:text="@string/seekbar_number"
            android:textColor="#5f80d6" />
     <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:max="120"
            android:progress="0"></SeekBar>


 </LinearLayout>


</LinearLayout>

</FrameLayout>